Optimise lemma proofs by using rfl instead of simp

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,23 +1,5 @@
-{"version": 7,
+{"version": "1.1.0",
  "packagesDir": ".lake/packages",
- "packages":
- [{"url": "https://github.com/leanprover-community/batteries",
-   "type": "git",
-   "subDir": null,
-   "rev": "7b3c48b58fa0ae1c8f27889bdb086ea5e4b27b06",
-   "name": "batteries",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/aesop.git",
-   "type": "git",
-   "subDir": null,
-   "rev": "d68b34fabd37681e6732be752b7e90aaac7aa0e0",
-   "name": "aesop",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": null,
-   "inherited": false,
-   "configFile": "lakefile.toml"}],
+ "packages": [],
  "name": "leanses",
  "lakeDir": ".lake"}
