--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,16 @@
 name: Build and test
+
 on:
   push:
-    branches:
-      - "main"
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install elan
-        run: |
-          set -o pipefail
-          curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- --default-toolchain none -y
-          ~/.elan/bin/lean --version
-          echo "$HOME/.elan/bin" >> $GITHUB_PATH
-
-      - name: Cache `.lake` folder
-        id: cache-lake
-        uses: actions/cache@v4
-        with:
-          path: .lake
-          key: ${{ runner.os }}-lake
-
-      - name: Compile and test
-        run: |
-          lake update # download cache of mathlib docs.
-          lake test
+      - uses: actions/checkout@v4
+      - uses: leanprover/lean-action@v1
